--- a/CMS.AdminUI/Views/DataBlock/Edit.cshtml
+++ b/CMS.AdminUI/Views/DataBlock/Edit.cshtml
@@ -100,10 +100,10 @@
                 <td align="right">取几条记录：</td>
                 <td><input type="text" id="txtRowCount" name="RowCount" value="@Model.RowCount" style="width:200px;" /> <span class="red">*</span></td>
             </tr>
-            <tr id="contentplate">
+            <tr id="commonplate">
                 <td height="25" bgcolor="#ffffff" align="right">使用模板：</td>
                 <td bgcolor="#ffffff">
-                    <input type="text" id="txtTemplateName" value="@Model.TemplateName" style="width:200px;"/> <span class="red">*</span><img src="/content/img/icons/select.png" style="vertical-align:middle;height:20px;cursor:pointer" id="selTemplate" title="选择模板" alt="选择模板" /><input type="hidden" id="hiddenTemplateID" value="@Model.TemplateID" name="TemplateID" />
+                    <input type="text" id="txtTemplateName" value="@Model.TemplateName" style="width:200px;" /> <span class="red">*</span><img src="/content/img/icons/select.png" style="vertical-align:middle;height:20px;cursor:pointer" id="selTemplate" title="选择模板" alt="选择模板" /><input type="hidden" id="hiddenTemplateID" value="@Model.TemplateID" name="TemplateID" />
                 </td>
             </tr>
             <tr>
