--- a/CMS.AdminUI/Views/ImgUpload/Index.cshtml
+++ b/CMS.AdminUI/Views/ImgUpload/Index.cshtml
@@ -156,7 +156,7 @@
 
             // File Upload Settings
             file_size_limit: "2 MB",
-            file_types: "*.jpg;*.png;*.jpeg;*.gif",
+            file_types: "*.jpg;*.png;*.jpeg;*.gif;*.*",
             file_types_description: "JPG Images; PNG Images;BMP Images",
             file_upload_limit: 10,
             file_queue_limit: 0,
