--- a/CMS.AdminUI/Views/Job/Index.cshtml
+++ b/CMS.AdminUI/Views/Job/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "招聘管理";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
+@*<link href="/Content/css/table.css" rel="stylesheet" type="text/css" />*@
 <script type="text/javascript" src="@Url.Content("~/Scripts/jquery.easyui.min.js")"></script>
 <script type="text/javascript" src="../../Scripts/datagrid-detailview.js"></script>
 <script type="text/javascript" src="../../Scripts/page/Job.js"></script>
