--- a/CMS.AdminUI/Views/Channel/Index.cshtml
+++ b/CMS.AdminUI/Views/Channel/Index.cshtml
@@ -88,6 +88,7 @@
     <li class="icon-edit"><a href="#edit">编辑</a></li>
     <li class="icon-close"><a href="#del">删除</a></li>
     <li class="icon-cascade"><a href="#publish">发布</a></li>
+    <li class="icon-search"><a href="#weburl">浏览</a></li>
 </ul>
 <script src="/Scripts/jquery-ui-1.8.11.min.js" type="text/javascript"></script>
 <script src="/Scripts/jquery.dynatree.js" type="text/javascript"></script>
