--- a/CMS.AdminUI/Views/Job/Recruitment.cshtml
+++ b/CMS.AdminUI/Views/Job/Recruitment.cshtml
@@ -68,9 +68,7 @@
                   }
             </tbody>
             </table>
-         <div id="pager">
-           @Html.Pager(Model, new PagerOptions { PageIndexParameterName = "id", CurrentPagerItemWrapperFormatString = "<span class=\"cpb\">{0}</span>", NumericPagerItemWrapperFormatString = "<span class=\"item\">{0}</span>", CssClass = "pages", SeparatorHtml = "" })
-        </div>
+        <div id="pager">@Html.Pager(Model, new PagerOptions { PageIndexParameterName = "PageIndex", PagerItemsSeperator = "", CurrentPagerItemWrapperFormatString = "<span class=\"current\">{0}</span>" }, new { id = "flickrpager" })</div>
 </div>
 </div>
 <script type="text/javascript" src="../../Scripts/page/job.rec.js"></script>
