--- a/CMS.AdminUI/Views/Role/Index.cshtml
+++ b/CMS.AdminUI/Views/Role/Index.cshtml
@@ -6,8 +6,20 @@
 <link href="/Content/Dynatree/ui.dynatree.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/easyui/default/easyui.css" rel="stylesheet" type="text/css"/>
 <link href="/Content/easyui/icon.css" rel="stylesheet" type="text/css"/>
-                <link href="/Content/css/table.css" rel="stylesheet" type="text/css" />
-@section submenu{
+<style type="text/css">
+    .aul {
+        line-height: 25px;
+        width: 700px;
+    }
+
+        .aul li {
+            float: left;
+            width: 100px;
+            padding-left: 15px;
+            list-style-type: none;
+        }
+</style>
+ @section submenu{
   <ul id="ulRoleList" style="margin-left:10px;">
     <li><h3><a href="javascript:void(0);" class="group">角色列表</a></h3></li>
     @{
@@ -44,7 +56,7 @@
         </div>
         <h3>角色配置</h3>
         <div style="margin-top:10px" class="data-tab">
-            <ul>
+            <ul class="aul">
                 <li class="on" id="liBaseInfo"><a href="javascript:void(0);">基本信息</a></li>
                 <li class="next" id="liMenuAuth"><a href="javascript:void(0);">菜单权限</a></li>
                 <li class="next" id="liChannelAuth"><a href="javascript:void(0);">栏目权限</a></li>
