--- a/CMS.AdminUI/Views/Index/Index.cshtml
+++ b/CMS.AdminUI/Views/Index/Index.cshtml
@@ -22,7 +22,7 @@
                     </td>
                 </tr>
                 <tr><td colspan="2">&nbsp;&nbsp;<a href="/User/EditPwd"><img src="/content/img/icons/icon_key.gif" style="vertical-align:middle;" alt="修改密码" title="修改密码" />&nbsp;修改密码</a></td></tr>
-                <tr><td colspan="2">&nbsp;&nbsp;<a href="/Login/Logout"><img src="/content/img/icons/exit.png" style="vertical-align:middle;" alt="退出系统" title="退出系统" />&nbsp;退出系统</a></td></tr>
+                <tr><td colspan="2">&nbsp;&nbsp;<a href="/Login/Logout"><img src="/content/img/icons/logout.png" style="vertical-align:middle;" alt="退出系统" title="退出系统" />&nbsp;退出系统</a></td></tr>
 			</tbody>
 		</table>
     </div>
