--- a/CMS.AdminUI/Views/News/Post.cshtml
+++ b/CMS.AdminUI/Views/News/Post.cshtml
@@ -7,7 +7,7 @@
     <ul>
         <li><h3><a href="@Url.Action("Index", "News")" class="house">菜品管理</a></h3>
             <ul>
-                <li><a href="@Url.Action("Post", "News")" class="pagenew">添加菜品</a></li>
+                <li><a href="@Url.Action("Post", "News")" class="pagenew">新增信息</a></li>
                 @*<li><a href="@Url.Action("Recycle", "News")">回收站</a></li>*@
             </ul>
         </li>
